--- a/pipe.yml
+++ b/pipe.yml
@@ -24,3 +24,15 @@ variables:
     default: "$SERVICE"
   - name: IMAGE
     default: "$IMAGE"
+  - name: BITBUCKET_REPO_FULL_NAME
+    default: "$BITBUCKET_REPO_FULL_NAME"
+  - name: BITBUCKET_BUILD_NUMBER
+    default: "$BITBUCKET_BUILD_NUMBER"
+  - name: SLACK_WEBHOOK
+    default: ""
+  - name: NOTIF_REGION
+    default: ""
+  - name: NOTIF_ACCOUNT
+    default: ""
+  - name: NOTIF_ENV
+    default: ""
